Merge latest changes from rework (#488)
Add proper functions #470
Generic Registers #471
Rmw base classes #475
Type Safety #478
Parsing & thread creation #479
Unit tests for thread creation #481
Move memory initialization, inlining, and thread creation from the parser to processing passes #483
Inlining of nondet_int #485
Various fixes/cleanup #487

---------

Co-authored-by: Thomas Haas <tomy.haas@t-online.de>
Co-authored-by: René Pascal Maseli <r.maseli@tu-bs.de>
Co-authored-by: Hernan Ponce de Leon <hernanl.leon@huawei.com>